--- a/pom.xml
+++ b/pom.xml
@@ -282,5 +282,10 @@
             <version>1.0.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.27</version>
+        </dependency>
     </dependencies>
 </project>
